seo metadesciption and metatitle added in blog, issue with codesnippets not responsive to overflow-x auto

--- a/src/app/[locale]/blog/blog.module.scss
+++ b/src/app/[locale]/blog/blog.module.scss
@@ -76,3 +76,15 @@ main.singleBlogMain {
 	border: 1px solid $light;
 	color: $dark;
 }
+
+.codeWrapper{
+	background-color: #ffffff18;
+	overflow-x: scroll;
+	pre{
+		overflow-x: scroll;
+	}
+	*{
+		
+		overflow-x: scroll;
+	}
+}
